# tieval

./: .gitignore  .readthedocs.yml  LICENSE  MANIFEST.in  README.md  eval.py  main.py  pyproject.toml  requirements.txt  setup.py  tempeval2.py  tempeval3.py  tempeval3_bert.py  tempeval3_bert_3labels.py  tempeval3_closure.py  timebankpt.py  timebankpt_rep.py  tox.ini
.github/workflows/: python-publish.yml
data/: download_datasets.sh  sample.tml
docs/: conf.py  datasets.rst  evaluate.rst  hands_on.rst  index.rst  logbook.rst  reference_index.rst  requirements.txt  tieval.datasets.rst  tieval.evaluate.rst  tieval.models.rst  tieval.rst
docs/notebooks/: dataset_statistics.ipynb  model_comparision.ipynb  overview.ipynb  (+2 more)
models/: models_performance.txt
notebooks/: timex_identificaiton.ipynb
scripts/: tempeval2.py  tempeval3.py  tempeval3_bert.py  tempeval3_bert_3labels.py  tempeval3_closure.py  timebankpt.py  timebankpt_rep.py
tests/: test_base.py  test_closure.py  test_datasets.py  test_entities.py  test_links.py  test_metrics.py  test_readers.py  test_temporal_relation.py  test_utils.py
text2story/: annotation.py  narrative.py  read_xml.py  temporal_closure.py  toolbox.py  utils.py
text2timeline/: __init__.py  __main__.py  base.py  basics.py  closure.py  constants.py  datasets.py  entities.py  evaluate.py  links.py  metrics.py  narrative.py  readers.py  temporal_closure.py  temporal_relation.py  toolbox.py  utils.py
tieval/: __init__.py  __main__.py  base.py  closure.py  entities.py  links.py  temporal_relation.py  utils.py  version.py
(+155 files in other folders)
